project_go/static/css/style.css
/*************************/
/*****    Colours    *****/
/*************************/
:root {
    --main-font-color: #444;
    --card-shadow-color: rgba(150,150,150, 0.5);
    --main-accent-color: deepskyblue;
    --light-accent-color: aliceblue;
    --main-neutral-color: #ccc;
    --default-box-shadow: 0 0 20px -3px var(--card-shadow-color);
}

/********************************/
/*****    Basic Elements    *****/
/********************************/
body {
    background-color: #f9f9f9;
    min-width: 960px;
    font-family: Avant Garde, Century Gothic, sans-serif;
    font-size: 1em;
    color: #444;   
    line-height: 1.25em;
    letter-spacing: 0.02em;
    padding-top: 50px;
}

div {
    box-sizing: border-box;
    text-align: left;
}

table {
    margin: 25px auto;
    border-collapse: collapse;
}

tr, th, td {
    padding: 10px;
    vertical-align: middle;
}

header, footer, nav {
    box-sizing: border-box;
}

header {
    background-color:deepskyblue;
    width: 100%;
    min-width: 960px;
    height: 50px;
    padding: 10px 0 10px 10px;
    z-index: 2;
    position:  fixed;
    top: 0px;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
    box-shadow: 0 0 5px 3px rgba(150,150,150, 0.5);
}

footer {
    background-color: #ccc;
    width: 100%;
    padding: 10px;
    margin: 100px 0 0 0;
    position: relative;
    z-index: 2;
}

header > nav {
    background-color:deepskyblue;
    height: 50px;
    padding: 10px;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
}

/********************************/
/*****    Helper Classes    *****/
/********************************/
.clear {
    clear: both;
}

.left {
    float: left;
}

.right {
    float: right;
}

.center-parent {
    text-align: center;
    justify-content: center;
}

.center-child {
    margin: inherit auto;
    display: inline-block;
}

.v-center {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.flex {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
}

.flex-col {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
    flex-direction: column;
}

.hidden {
    visibility: hidden;
}


.display-none {
    display: none;
}

.hover-hidden {
    display: none;
    position: absolute;
    top: 0;
}

.hover-parent {
    position:relative;
}

.hover-parent:hover div {
    display: block;
}

/*************************/
/*****    Headers    *****/
/*************************/
h1, h2, h3, h4 {
    margin: 0 0 15px 0;
    box-sizing: border-box;
    color: #000;
    line-height: 1em;
}

#title {
    margin: 5px 0;
    font-family: 'Exo', sans-serif;
    font-size: 3.5em;
}

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 2em;
}

h3 {
    font-size: 1.6em;
}

h4 {
    font-size: 1.30em;
}

h1 > span, h2 > span {
    font-size: 0.45em;
}


/************************************/
/*****    Text, Fonts, Lists    *****/
/************************************/
strong, b {
    color: #000;
    font-weight: bold;
}

p {
    margin: 0 0 15px 0;
}

ol, ul {
    margin: 5px 30px 5px;
}

ol {
    list-style: decimal outside;
}

ul {
    list-style: disc outside;
}

.octi-margin {
    margin: 0 15px;
}

nav ul {
    list-style-type: none;
    margin: 0;
}

nav ul li{
    display: inline;
    margin: 0 0 0 4px;
}

ul.reward-list {
    margin: 5px 15px;
    font-size: 0.85em;
}

/***********************/
/*****    Links    *****/
/***********************/
a {
    color: deepskyblue;
    text-decoration: none;
}

p a:hover {
    text-decoration: underline;
}

a.button, .project-detail-card{
    background-color:deepskyblue;
    padding: 10px;
    position: relative;
    border: none;
    box-shadow: 0 0 5px 1px #bbb;
    font-size: 1.2em;
    font-weight: bold;
    color: #fff;
    display: inline-block;
    box-sizing: border-box;
    margin: 0 10px 5px;
    text-align: center;
}

a.button:hover {
    background-color:#444;
    color: #fff;
}

/*****    header links    *****/
#title a {
    color: #444;
}

#title a:hover {
    color: #fff;
}

nav {
    color: #fff;
}
nav a, nav label {
    display: inline-block;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

.cat-links a {
    color: #444;
}

nav ul a, nav ul label {
    text-transform: uppercase;
    font-size: 1.4em;
    padding: 6px;
}

nav ul a:hover, nav ul label:hover {
    background-color: #fff;
    color: deepskyblue;
}

.cat-links ul a:hover {
    background-color: deepskyblue;
    color: #fff;
}

.mega-octicon:hover {
    color: #444;
}

/**********************************/
/*****    Inputs and Forms    *****/
/**********************************/
input[type=submit] {
    background-color:deepskyblue;
    padding: 10px;
    position: relative;
    border: none;
    box-shadow: 0 0 5px 1px #bbb;
    font-size: 1.2em;
    font-weight: bold;
    color: #fff;
}

#search input[type=submit] {
    box-shadow: none;
}

input[type=submit]:hover {
    background-color:#444;
}

input[type=search] {
}

#search input[type=submit]:hover {
    top: 0px;
    left: 0px;
    box-shadow: none;
    background-color: #fff;
    color:deepskyblue;
}

input, select {
    background-color: #fff;
    padding: 5px;
    border: 1px solid #bbb;
    box-shadow: none;
    text-shadow: none;
}

.form-table tr:nth-child(odd) {
    background-color: aliceblue;
}

#register-form table tr th {
    width: 140px;
}

#register-form table tr td {
    width: 300px;
}

input[type=checkbox]#explore-chck-box {
    display: none;
}

input[type=checkbox]#explore-chck-box:checked ~ nav#explore-card {
   display: inherit;
}

/*****    form text    *****/
.helptext {
    font-size: 0.85em;
}

.errorlist {
    margin: 0;
}

.errorlist li {
    list-style-type: none;
    font-size: 0.85em;
    color: firebrick;
}


/********************************************/
/*****    Structural Custom Elements    *****/
/********************************************/
#content-wrapper {
    width: 100%;
    text-align: center;
}

#content {
    width: 75%;
    min-width: 900px;
    max-width: 1250px;
    margin: 0 auto;
    text-align: left;
}

#search {
    margin: 0 25px;
}

#project-hero-img {
    width: 250px;
    height:250px;
}

.content-non-card, .content-card, #explore-card {
    margin: 20px auto;
    padding: 30px;
}

.content-card, #explore-card {
    box-shadow: 0 0 20px -3px rgba(150,150,150, 0.5);
}

.content-card, #explore-card {
    background-color: #fff;
}

#explore-card {
    width: 100%;
    position: fixed;
    z-index: 2;
    margin-top: -10px;
}

.address-card, .project-card, .action-card, .pledgereward-card, .reward-card {
    background-color: #fff;
    width: 190px;
    padding: 15px;
    margin: 15px 10px 5px;
    box-shadow: 0 0 20px -3px rgba(150,150,150, 0.5);
    position: relative;
    display: inline-block;
    vertical-align: top;
}

.address-card a, .project-card a, .action-card a, .pledgereward-card a {
    color: #444;
}

.project-card, .pledgereward-card {
    width: 240px;
}

.flex-col > .project-card {
    flex-grow: 2;
}

.project-card-img {
    width: 240px;
    height: 200px;
    overflow: hidden;
    margin: 0 -15px;
    border-bottom: 1px solid rgba(150,150,150, 0.5);
    position: relative;
}

.project-card-img img{
    height: 100%;
    min-width:  100%;
    min-height: 200px;
    object-fit: cover;
}

.project-card a {
    color: #444;
}

.project-card .short-desc {
    font-size: 0.9em;
}

.project-flash-padding {
    padding: 0 15px;
}

.project-flash-card-short-desc {
    background-color: rgba(255,255,255,0.70);
    width: 100%;
    height: 100%;
    padding: 15px;
}

#pledgereward-strip-card {
    background-color: #fff;
    width: 100%;
    box-shadow: 0 0 20px -3px rgba(150,150,150, 0.5);
    margin: 20px auto;
    padding: 15px 30px 15px 60px;
    position: relative;
}

.strip-card-header {
    background-color: deepskyblue;
    color: #fff;
    padding: 10px;
    height:100%;
    float: left;
    position:absolute;
    top: 0;
    left: 0;
}

.action-card {
    background-color: deepskyblue;
    font-size: 2em;
    line-height: 1em;
    font-weight: bold;
    color: #fff;    
}

.action-card:hover {
    background-color: #444;
}

.action-card a {
    color: #fff;    
}

.card-header, .card-footer {
    background-color:deepskyblue;
    color: #fff;
    width: 100%;
    margin: 0 -15px;
    padding: 5px 15px;
    text-align: center;
}
.card-header *, .card-footer * {
    color: #fff;
}

.card-header a:hover, .card-footer a:hover {
    color: #444;
}

.card-footer {
    position: absolute;
    bottom: 0px;
}

.card-header {
    box-sizing: content-box;
    margin-top: -15px;
    position: relative;
}

.banner-right, .banner-left {
    position: absolute;
    top: 45px;
    z-index: 1;
}

.banner-right {
    right: 0;
}

.banner-left {
    left: 0;
}

.project-detail-card {
    background-color: #444;
}

.hero-image {
    max-width: 100%;
    display: inline-block;
    overflow: hidden;
    box-shadow: 0 0 20px -3px rgba(150,150,150, 0.5);
}

.hero-image img {
    max-width: 1200px;
    max-height: 1000px;
    width: 100%;
    height: 100%;
}

div > img{
    display: block;
}

